@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!/usr/bin/python3
 
 from setuptools import setup
 from DistUtilsExtra.command import (build_extra, build_i18n, build_help,
