@@ -1,4 +1,4 @@
-#!/usr/bin/python
+#!/usr/bin/python3
 import apt
 import apt_pkg
 import logging
